# api

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
app/: main.py
app/api/v1/: limiter.py  routes.py
app/core/: config.py
app/models/: cbam_layer.py  focal_loss.py  schemas.py  tensorflow_model.py
app/services/: predictions.py
app/tests/: test_main.py
database/: Dockerfile  docker-compose.yml  init.sql
spotplotter/: database.py  main.py
spotplotter/api/v1/: limiter.py  predict.py  user.py
spotplotter/core/: config.py  email.py  jwt.py
spotplotter/models/: predict.py  tensorflow_model.py  user.py
spotplotter/services/: predict.py  user.py
